[package]
name = "taskust"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
comfy-table = "7.1"
ratatui = "0.29.0"
crossterm = "0.28.1"
clap_complete = "4.5"
